--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 /* Hide scrollbar for all browsers while maintaining scroll functionality */
 html, body {
     scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* Internet Explorer and Edge */
+    -ms-overflow-style: none;
+    scroll-behavior: smooth;  /* Internet Explorer and Edge */
 }
 
 /* Hide webkit (Chrome, Safari, Opera) scrollbar */
